--- a/index.html
+++ b/index.html
@@ -1,41 +1,75 @@
-<!doctype html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Home work modul 5</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</head>
+<body>
 
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <title>PWS A5 HW</title>
-
-
-  </head>
-  <body>
-
-    <div class="container">
-      <h1>Курочка ряба</h1>
-
-      <form id="messages">
-
-        <div class="form-group">
-          <label for="var1">var1</label>
-          <input type="text" class="form-control" name="var1" placeholder="Старик" value="Старик">
-        </div>
-
-      </form>
-
-      <div class="row">
-        <a id="button-fetch" class="btn btn-primary">Создать</a>
-      </div>
-
-      <div class="row">
-        <div id="result"></div>
-      </div>
-
+  <div class="container header">
+    <div class="header clearfix">
+      
+      <h3 class="text-muted">Home work modul 5</h3>
     </div>
+  </div>
 
 
-    <script src="./js/jquery-3.4.1.min.js"></script>
-    <script src="./js/bootstrap.bundle.min.js"></script>
-    <script src="./js/ryaba.js"></script>
-  </body>
+  <div class="container">
+    <h1>"Курочка Ряба"</h1>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-4">
+          <form>
+              <div class="form-group">
+                <label for="var1">Var 1</label>
+                <input type="text" class="form-control" id="var1" placeholder="granpa">
+              </div>
+              <div class="form-group">
+                <label for="var2">Var 2</label>
+                <input type="text" class="form-control" id="var2" placeholder="granma">
+              </div>
+              <div class="form-group">
+                <label for="var3">Var 3</label>
+                <input type="text" class="form-control" id="var3" placeholder="chiken">
+              </div>
+              <div class="form-group">
+                <label for="var4">Var 4</label>
+                <input type="text" class="form-control" id="var4" placeholder="egg">
+              </div>
+              <div class="form-group">
+                <label for="var5">Var 6</label>
+                <input type="text" class="form-control" id="var5" placeholder="mose">
+              </div>
+              <div class="form-group">
+                <label for="var6">Var 7</label>
+                <input type="text" class="form-control" id="var6" placeholder="khvost)))">
+              </div>    
+              <div class="form-group">
+                <label for="speach">Var 8</label>
+                <textarea class="form-control" name="" id="speach" rows="3" placeholder="dont wory be happy"></textarea>
+              </div>
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".modal">Push it</button>
+            </form>
+      </div>
+      <div class="col">
+        <div class="jumbotron result"></div>
+      </div>
+<!--       <div class="col-1">
+        <div class="spinner-border" role="status">
+          <span class="sr-only">Loading...</span>
+        </div>
+      </div> -->
+    </div>
+      
+
+  </div>
+
+  <script src="js/ryaba.js"></script>
+</body>
 </html>
