--- a/index.html
+++ b/index.html
@@ -24,47 +24,45 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-4">
-          <form>
-              <div class="form-group">
+      <div class="col-12">
+          <form class="row">
+              <div class="form-group col-3">
                 <label for="var1">Var 1</label>
-                <input type="text" class="form-control" id="var1" placeholder="granpa">
+                <input type="text" class="form-control" id="var1" placeholder="granpa" required>
               </div>
-              <div class="form-group">
+              <div class="form-group col-3">
                 <label for="var2">Var 2</label>
-                <input type="text" class="form-control" id="var2" placeholder="granma">
+                <input type="text" class="form-control" id="var2" placeholder="granma" required>
               </div>
-              <div class="form-group">
+              <div class="form-group col-3">
                 <label for="var3">Var 3</label>
-                <input type="text" class="form-control" id="var3" placeholder="chiken">
+                <input type="text" class="form-control" id="var3" placeholder="chiken" required>
               </div>
-              <div class="form-group">
+              <div class="form-group col-3">
                 <label for="var4">Var 4</label>
-                <input type="text" class="form-control" id="var4" placeholder="egg">
+                <input type="text" class="form-control" id="var4" placeholder="egg" required>
               </div>
-              <div class="form-group">
+              <div class="form-group col-3">
                 <label for="var5">Var 6</label>
-                <input type="text" class="form-control" id="var5" placeholder="mose">
+                <input type="text" class="form-control" id="var5" placeholder="mose" required>
               </div>
-              <div class="form-group">
+              <div class="form-group col-3">
                 <label for="var6">Var 7</label>
-                <input type="text" class="form-control" id="var6" placeholder="khvost)))">
+                <input type="text" class="form-control" id="var6" placeholder="tail" required>
               </div>    
-              <div class="form-group">
+              <div class="form-group col-3">
                 <label for="speach">Var 8</label>
-                <textarea class="form-control" name="" id="speach" rows="3" placeholder="dont wory be happy"></textarea>
+                <textarea class="form-control" name="" id="speach" rows="3" placeholder="dont wory be happy" required></textarea>
               </div>
-              <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".modal">Push it</button>
+              <div class="col-3"></div>
+
+              <button type="button" class="btn btn-primary">Push it</button>
             </form>
       </div>
       <div class="col">
         <div class="jumbotron result"></div>
       </div>
-<!--       <div class="col-1">
-        <div class="spinner-border" role="status">
-          <span class="sr-only">Loading...</span>
-        </div>
-      </div> -->
+
     </div>
       
 
