--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container header">
     <div class="header clearfix">
       
-      <h3 class="text-muted">Home work modul 5</h3>
+      <h3 class="text-muted">Пример генерации текста из полей формы на JS</h3>
     </div>
   </div>
 
